fixed flickering due to scrollbar

--- a/new2/style.css
+++ b/new2/style.css
@@ -4,10 +4,12 @@
   box-sizing: border-box;
 }
 
-html, body {
+html {
   width: 100%;
+  overflow-y: scroll;
 }
 body {
+  width: 100%;
   text-align: center;
   font-family: 'Lato', HelveticaNeue, Helvetica, sans-serif;
   color: #222;
